--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -106,3 +106,11 @@ notes:
       "Type-II Error Rate", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(R^- | C^+)\\) of an incorrect, negative test result given that the condition is present is known as...
+
+
+- id: 0
+  fields:
+    Front: |
+      "Precision", in the context of a binary classification test, is defined as...
+    Back: |
+      The (conditional) probability \\(p(C^+|R^+)\\) that a condition is present given a positive test result is known as...
