Negative predictive value

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -114,3 +114,9 @@ notes:
       "Precision", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(C^+|R^+)\\) that a condition is present given a positive test result is known as...
+- id: 0
+  fields:
+    Front: |
+      "NPV (Negative Predictive Value)", in the context of a binary classification test, is defined as...
+    Back: |
+      The (conditional) probability \\(p(C^-|R^-)\\) that a condition is absent given a negative test result is known as...
