False discovery rate

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -120,3 +120,9 @@ notes:
       "NPV (Negative Predictive Value)", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(C^-|R^-)\\) that a condition is absent given a negative test result is known as...
+- id: 0
+  fields:
+    Front: |
+      "FDR (False Discovery Rate)", in the context of a binary classification test, is defined as...
+    Back: |
+      The (conditional) probability \\(p(C^-|R^+)\\) that a condition is absent given an incorrect, positive test result is known as...
