False omission rate

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -126,3 +126,9 @@ notes:
       "FDR (False Discovery Rate)", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(C^-|R^+)\\) that a condition is absent given an incorrect, positive test result is known as...
+- id: 0
+  fields:
+    Front: |
+      "FOR (False Omission Rate)", in the context of a binary classification test, is defined as...
+    Back: |
+      The (conditional) probability \\(p(C^+|R^-)\\) that a condition is present given an incorrect, negative test result is known as...
