Alternate names for false positive

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -132,3 +132,11 @@ notes:
       "FOR (False Omission Rate)", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(C^+|R^-)\\) that a condition is present given an incorrect, negative test result is known as...
+
+
+- id: 0
+  fields:
+    Front: |
+      Alternate names for "False Positive" include...
+    Back: |
+      "Type-I Error", "False Discovery" are alternate names for...
