Alternate names for false negative

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -140,3 +140,9 @@ notes:
       Alternate names for "False Positive" include...
     Back: |
       "Type-I Error", "False Discovery" are alternate names for...
+- id: 0
+  fields:
+    Front: |
+      Alternate names for "False Negative" include...
+    Back: |
+      "Type-II Error", "False Omission" are alternate names for...
