--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -10,3 +10,16 @@ defaults:
   - CCAC-RoA-ArithmeticOperations
   markdownTabLength: 2
 notes:
+- id: 1537480219826
+  modelName: BasicMathJaxAndReverse
+  fields:
+    Front: |
+      ## RoA Eqn 4: The following, factorized, is expressed as...
+      \\[
+        a^3 - b^3
+      \\]
+    Back: |
+      ## RoA Eqn 4: The following, expanded, is expressed as...
+      \\[
+        (a - b)(a^2 + ab + b^2)
+      \\]
