Prove the Quadratic Formula

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -79,3 +79,40 @@ notes:
       \\[
         x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}
       \\]
+- id: 1537482001842
+  fields:
+    Front: |
+      ## RoA Thm 7.3: Prove the Quadratic Formula.
+    Back: |
+      By the Factor Theorem, the roots the general quadratic expression \\(ax^2 + bx + c\\) are the values of \\(x\\) for which \\(ax^2 + bx + c = 0\\), so we must solve this equation for \\(x\\). We start by rewriting this equation by completing the square:
+      \\[
+      \begin{align}
+        0
+        &= ax^2 + bx + c \\\\
+        &= a \left(x + \frac{b}{2a}\right)^2 + \left(c - \frac{b^2}{4a}\right)
+      \end{align}
+      \\]
+      We isolate the left-hand summand by subtracting the right-hand summand from both sides:
+      \\[
+        \left( \frac{b^2}{4a} - c \right) = a \left(x + \frac{b}{2a}\right)^2
+      \\]
+      Swap sides to make things easier to follow, then simplify the right side:
+      \\[
+        a \left(x + \frac{b}{2a}\right)^2
+        = \left( \frac{b^2}{4a} - c \right)
+        = \frac{b^2 - 4ac}{4a}
+      \\]
+      Divide both sides by \\(a\\):
+      \\[
+        \left(x + \frac{b}{2a}\right)^2
+        = \frac{b^2 - 4ac}{4a^2}
+      \\]
+      Take the square root of both sides:
+      \\[
+        x + \frac{b}{2a}
+        = \frac{\pm\sqrt{b^2 - 4ac}}{2a}
+      \\]
+      Finally, subtract \\(\frac{b}{2a}\\) from both sides:
+      \\[
+        x = \frac{-b \pm\sqrt{b^2 - 4ac}}{2a}
+      \\]
