--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -125,3 +125,10 @@ notes:
       \\[
         (a+b)^n = \sum_{k=0}^{n}\binom{n}{k}a^{n-k}b^k
       \\]
+- id: 1537488021945
+  fields:
+    Front: |
+      ## RoA problem 001: Expand and simplify:
+      \\[
+        (-6ab)(0.5ac)
+      \\]
