--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -153,3 +153,10 @@ notes:
       \\[
         (4 - 3x)x
       \\]
+- id: 1537488022179
+  fields:
+    Front: |
+      ## RoA problem 005: Expand and simplify:
+      \\[
+        -2(4 - 3a)
+      \\]
