--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -188,3 +188,10 @@ notes:
       \\[
         (4x - 1)(3x + 7)
       \\]
+- id: 1537488022429
+  fields:
+    Front: |
+      ## RoA problem 010: Expand and simplify:
+      \\[
+        x(x - 1)(x + 2)
+      \\]
