--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -209,3 +209,10 @@ notes:
       \\[
         (2 + 3x)^2
       \\]
+- id: 1537488022579
+  fields:
+    Front: |
+      ## RoA problem 013: Expand and simplify:
+      \\[
+        y^4(6 - y)(5 + y)
+      \\]
