--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -244,3 +244,10 @@ notes:
       \\[
         \frac{2 + 8x}{2}
       \\]
+- id: 1537488022829
+  fields:
+    Front: |
+      ## RoA problem 018: Perform the indicated operations, and simplfy:
+      \\[
+        \frac{9b + 6}{3b}
+      \\]
