--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -265,3 +265,10 @@ notes:
       \\[
         \frac{1}{x+1} + \frac{1}{x-1}
       \\]
+- id: 1537488022979
+  fields:
+    Front: |
+      ## RoA problem 021: Perform the indicated operations, and simplfy:
+      \\[
+        u + 1 + \frac{u}{u+1}
+      \\]
