--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -300,3 +300,10 @@ notes:
       \\[
         \left(\frac{-2r}{s}\right) \left(\frac{s^2}{-6t}\right)
       \\]
+- id: 1537488023229
+  fields:
+    Front: |
+      ## RoA problem 026: Perform the indicated operations, and simplfy:
+      \\[
+        \frac{a}{bc} \div \frac{b}{ac}
+      \\]
