--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -355,3 +355,10 @@ notes:
       \\[
         x^2 - x - 6
       \\]
+- id: 1537488023580
+  fields:
+    Front: |
+      ## RoA problem 033: Factor the expression:
+      \\[
+        x^2 - 2x - 8
+      \\]
