--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -362,3 +362,10 @@ notes:
       \\[
         x^2 - 2x - 8
       \\]
+- id: 1537488023629
+  fields:
+    Front: |
+      ## RoA problem 034: Factor the expression:
+      \\[
+        2x^2 + 7x - 4
+      \\]
