--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -383,3 +383,10 @@ notes:
       \\[
         8x^2 + 10x + 3
       \\]
+- id: 1537488023831
+  fields:
+    Front: |
+      ## RoA problem 037: Factor the expression:
+      \\[
+        6x^2 - 5x - 6
+      \\]
