--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -404,3 +404,10 @@ notes:
       \\[
         t^3 + 1
       \\]
+- id: 1537488023980
+  fields:
+    Front: |
+      ## RoA problem 040: Factor the expression:
+      \\[
+        4t^2 - 9s^2
+      \\]
