--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -453,3 +453,10 @@ notes:
       \\[
         x^3 - 2x^2 - 23x + 60
       \\]
+- id: 1537488024329
+  fields:
+    Front: |
+      ## RoA problem 047: Factor the expression:
+      \\[
+        x^3 + 5x^2 - 2x - 24
+      \\]
