--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -460,3 +460,10 @@ notes:
       \\[
         x^3 + 5x^2 - 2x - 24
       \\]
+- id: 1537488024379
+  fields:
+    Front: |
+      ## RoA problem 048: Factor the expression:
+      \\[
+        x^3 - 3x^2 - 4x + 12
+      \\]
