--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -474,3 +474,10 @@ notes:
       \\[
         \frac{x^2 + x - 2}{x^2 - 3x + 2}
       \\]
+- id: 1537488024502
+  fields:
+    Front: |
+      ## RoA problem 050: Simplify the expression:
+      \\[
+        \frac{2x^2 - 3x - 2}{x^2 - 4}
+      \\]
