--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -495,3 +495,10 @@ notes:
       \\[
         \frac{x^3 + 5x^2 + 6x}{x^2 - x - 12}
       \\]
+- id: 1537488024679
+  fields:
+    Front: |
+      ## RoA problem 053: Simplify the expression:
+      \\[
+        \frac{1}{x + 3} + \frac{1}{x^2 - 9}
+      \\]
