--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -502,3 +502,10 @@ notes:
       \\[
         \frac{1}{x + 3} + \frac{1}{x^2 - 9}
       \\]
+- id: 1537488024729
+  fields:
+    Front: |
+      ## RoA problem 054: Simplify the expression:
+      \\[
+        \frac{x}{x^2 + x - 2} - \frac{2}{x^2 - 5x + 4}
+      \\]
