--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -509,3 +509,10 @@ notes:
       \\[
         \frac{x}{x^2 + x - 2} - \frac{2}{x^2 - 5x + 4}
       \\]
+- id: 1537488024779
+  fields:
+    Front: |
+      ## RoA problem 055: Complete the square:
+      \\[
+        x^2 + 2x + 5
+      \\]
