--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -516,3 +516,10 @@ notes:
       \\[
         x^2 + 2x + 5
       \\]
+- id: 1537488024864
+  fields:
+    Front: |
+      ## RoA problem 056: Complete the square:
+      \\[
+        x^2 - 16x + 80
+      \\]
