--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -530,3 +530,10 @@ notes:
       \\[
         x^2 - 5x + 10
       \\]
+- id: 1537488024962
+  fields:
+    Front: |
+      ## RoA problem 058: Complete the square:
+      \\[
+        x^2 + 3x + 1
+      \\]
