--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -537,3 +537,10 @@ notes:
       \\[
         x^2 + 3x + 1
       \\]
+- id: 1537488025012
+  fields:
+    Front: |
+      ## RoA problem 059: Complete the square:
+      \\[
+        4x^2 + 4x - 2
+      \\]
