--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -544,3 +544,10 @@ notes:
       \\[
         4x^2 + 4x - 2
       \\]
+- id: 1537488025062
+  fields:
+    Front: |
+      ## RoA problem 060: Complete the square:
+      \\[
+        3x^2 - 24x + 50
+      \\]
