--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -551,3 +551,10 @@ notes:
       \\[
         3x^2 - 24x + 50
       \\]
+- id: 1537488025113
+  fields:
+    Front: |
+      ## RoA problem 061: Solve the equation:
+      \\[
+        x^2 + 9x - 10 = 0
+      \\]
