--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -558,3 +558,10 @@ notes:
       \\[
         x^2 + 9x - 10 = 0
       \\]
+- id: 1537488025162
+  fields:
+    Front: |
+      ## RoA problem 062: Solve the equation:
+      \\[
+        x^2 - 2x - 8 = 0
+      \\]
