--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -565,3 +565,10 @@ notes:
       \\[
         x^2 - 2x - 8 = 0
       \\]
+- id: 1537488025212
+  fields:
+    Front: |
+      ## RoA problem 063: Solve the equation:
+      \\[
+        x^2 + 9x - 1 = 0
+      \\]
