--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -579,3 +579,10 @@ notes:
       \\[
         x^2 - 2x - 7 = 0
       \\]
+- id: 1537488025312
+  fields:
+    Front: |
+      ## RoA problem 065: Solve the equation:
+      \\[
+        3x^2 + 5x + 1 = 0
+      \\]
