--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -635,3 +635,10 @@ notes:
       \\[
         x^2 + 3x + 6
       \\]
+- id: 1537488025729
+  fields:
+    Front: |
+      ## RoA problem 073: Use the Binomial Theorem to expand the expression:
+      \\[
+        (a + b)^6
+      \\]
